--- a/templates/index.html
+++ b/templates/index.html
@@ -10,28 +10,14 @@
 <h1>To Do List</h1>
 <a href="/task/add">Add A Task</a>
 {% for task in tasks %}
-    {% if task.status.title == 'New' %}
-        <div class="alert alert-danger" role="alert">
+        <div class="alert" role="alert">
             <p>Description: {{ task.description }}</p>
-            <p>Detailed description: {{ task.details }}</p>
             <p>Status: {{ task.status }}</p>
             <p>Completion date: {{ task.completion_date }}</p>
+        <p>
+            <a href="{% url 'task_detail' task.pk %}">More...</a>
+        </p>
         </div>
-    {% elif task.status.title == 'In Process' %}
-        <div class="alert alert-warning" role="alert">
-            <p>Description: {{ task.description }}</p>
-            <p>Detailed description: {{ task.details }}</p>
-            <p>Status: {{ task.status }}</p>
-            <p>Completion date: {{ task.completion_date }}</p>
-        </div>
-    {% elif task.status.title == 'Completed' %}
-        <div class="alert alert-success" role="alert">
-            <p>Description: {{ task.description }}</p>
-            <p>Detailed description: {{ task.details }}</p>
-            <p>Status: {{ task.status }}</p>
-            <p>Completion date: {{ task.completion_date }}</p>
-        </div>
-    {% endif %}
 {% endfor %}
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
