--- a/templates/index.html
+++ b/templates/index.html
@@ -1,15 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <title>To Do List</title>
-</head>
-<body>
-<h1>To Do List</h1>
-<a href="/task/add">Add A Task</a>
-{% for task in tasks %}
+{% extends 'base.html' %}
+{% block title %}
+    To Do List
+{% endblock %}
+{% block menu %}
+
+{% endblock %}
+
+{% block content %}
+    {% for task in tasks %}
         <div class="alert" role="alert">
             <p>Description: {{ task.description }}</p>
             <p>Status: {{ task.status }}</p>
@@ -19,8 +17,4 @@
         </p>
         </div>
 {% endfor %}
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-        crossorigin="anonymous"></script>
-</body>
-</html>
+{% endblock %}
