--- a/templates/task_create.html
+++ b/templates/task_create.html
@@ -1,17 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Create Task</title>
-</head>
-<body>
-    <h1>Create Task</h1>
+{% extends 'base.html' %}
+{% block content %}
     <form method="post">
         {% csrf_token %}
         <label for="description">Description:</label>
         <input type="text" name="description" id="description" required><br><br>
+        {#        <label for="details">Detailed description:</label>#}
+        {#        <input type="text" name="details" id="details"><br><br>#}
         <label for="details">Detailed description:</label>
-        <input type="text" name="details" id="details"><br><br>
+        <textarea name="details" id="details" style="width: 400px; height: 100px;"></textarea><br><br>
+
         <label for="status">Status:</label>
         <select name="status" id="status" required>
             {% for choice in task.STATUS_CHOICES %}
@@ -22,5 +19,6 @@
         <input type="date" name="completion_date" id="completion_date"><br><br>
         <input type="submit" value="Create">
     </form>
-</body>
-</html>
+{% endblock %}
+
+
