Added tasks partial html, bootstrap to create template

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,13 +8,18 @@
 
 {% block content %}
     {% for task in tasks %}
-        <div class="alert" role="alert">
-            <p>Description: {{ task.description }}</p>
-            <p>Status: {{ task.status }}</p>
-            <p>Completion date: {{ task.completion_date }}</p>
-        <p>
-            <a href="{% url 'task_detail' task.pk %}">More...</a>
-        </p>
-        </div>
-{% endfor %}
+        {% if task.status.title == 'New' %}
+            <div class="alert alert-danger" role="alert">
+                {% include 'tasks.html' %}
+            </div>
+        {% elif task.status.title == 'In Process' %}
+            <div class="alert alert-warning" role="alert">
+                {% include 'tasks.html' %}
+            </div>
+        {% elif task.status.title == 'Completed' %}
+            <div class="alert alert-success" role="alert">
+                {% include 'tasks.html' %}
+            </div>
+        {% endif %}
+    {% endfor %}
 {% endblock %}
