--- a/templates/base.html
+++ b/templates/base.html
@@ -9,11 +9,11 @@
     {% endblock %}</title>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark" style="padding: 0 60px">
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="/">Home</a>
+        <a class="nav-link" href="{% url 'index' %}">Home</a>
       </li>
         <li class="nav-item active">
         <a class="nav-link" href="{% url 'task_add' %}">Add New Task</a>
