--- a/templates/task_create.html
+++ b/templates/task_create.html
@@ -2,22 +2,27 @@
 {% block content %}
     <form method="post">
         {% csrf_token %}
-        <label for="description">Description:</label>
-        <input type="text" name="description" id="description" required><br><br>
-        {#        <label for="details">Detailed description:</label>#}
-        {#        <input type="text" name="details" id="details"><br><br>#}
-        <label for="details">Detailed description:</label>
-        <textarea name="details" id="details" style="width: 400px; height: 100px;"></textarea><br><br>
-
-        <label for="status">Status:</label>
-        <select name="status" id="status" required>
-            {% for choice in task.STATUS_CHOICES %}
-                <option value="{{ choice.0 }}">{{ choice.1 }}</option>
-            {% endfor %}
-        </select><br><br>
-        <label for="completion_date">Completion Date:</label>
-        <input type="date" name="completion_date" id="completion_date"><br><br>
-        <input type="submit" value="Create">
+        <div class="form-group">
+            <label for="description">Description</label>
+            <input type="text" class="form-control" name="description" id="description" required>
+        </div>
+        <div class="form-group">
+            <label for="details">Detailed description</label>
+            <textarea class="form-control" name="details" id="details" rows="3"></textarea>
+        </div>
+        <div class="form-group">
+            <label for="status">Status</label>
+            <select class="form-control" id="status" name="status" required>
+                {% for choice in task.STATUS_CHOICES %}
+                    <option value="{{ choice.0 }}">{{ choice.1 }}</option>
+                {% endfor %}
+            </select>
+        </div>
+        <div class="form-group">
+            <label for="completion_date">Completion Date</label>
+            <input type="date" class="form-control" name="completion_date" id="completion_date">
+        </div>
+        <button type="submit" class="btn btn-primary">Create</button>
     </form>
 {% endblock %}
 
