--- a/templates/index.html
+++ b/templates/index.html
@@ -10,15 +10,15 @@
     {% for task in tasks %}
         {% if task.status.title == 'New' %}
             <div class="alert alert-danger" role="alert">
-                {% include 'tasks.html' %}
+                <a href="{% url 'task_detail' task.pk %}" class="alert-link" style="text-decoration: none; font-weight: normal">{% include 'tasks.html' %}</a>
             </div>
         {% elif task.status.title == 'In Process' %}
             <div class="alert alert-warning" role="alert">
-                {% include 'tasks.html' %}
+                <a href="{% url 'task_detail' task.pk %}" class="alert-link" style="text-decoration: none; font-weight: normal">{% include 'tasks.html' %}</a>
             </div>
         {% elif task.status.title == 'Completed' %}
             <div class="alert alert-success" role="alert">
-                {% include 'tasks.html' %}
+                <a href="{% url 'task_detail' task.pk %}" class="alert-link" style="text-decoration: none; font-weight: normal">{% include 'tasks.html' %}</a>
             </div>
         {% endif %}
     {% endfor %}
