--- a/templates/task_detail.html
+++ b/templates/task_detail.html
@@ -1,10 +1,14 @@
 {% extends 'base.html' %}
 {% block content %}
-    <div>
-        <p>Description: {{ task.description }}</p>
-        <p>Detailed description: {{ task.details }}</p>
-        <p>Status: {{ task.status }}</p>
-        <p>Completion date: {{ task.completion_date }}</p>
+    <div class="card">
+        <div class="card-header">
+            <p>Status: {{ task.status }} | Completion date: {{ task.completion_date }}</p>
+        </div>
+        <div class="card-body">
+            <h5 class="card-title">{{ task.description }}</h5>
+            <p class="card-text">{{ task.details }}</p>
+            <a href="{% url 'index' %}" class="btn btn-primary">Go back</a>
+        </div>
     </div>
 {% endblock %}
 
