--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -1,4 +1,1 @@
-<p>Description: {{ task.description }}</p>
-<p>Status: {{ task.status }}</p>
-<p>Completion date: {{ task.completion_date }}</p>
-<p><a href="{% url 'task_detail' task.pk %}">More...</a></p>
+<p>{{ task.description }} | Status: {{ task.status }} | Date: {{ task.completion_date }}</p>
